DOC: multi-metric tutorial

--- a/tutorials/Multi-metric registration.ipynb
+++ b/tutorials/Multi-metric registration.ipynb
@@ -49,6 +49,73 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Append the first metric to the metric list. In actuality this means that reg2 will be driven by both a demons metric and the default metric."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metrics = list( )\n",
+    "metrics.append( demonsMetric )\n",
+    "reg2 = ants.registration( image, image2, 'SyNOnly',\n",
+    "    multivariate_extras = metrics )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Add a third metric and run this new registration."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "metrics.append( ccMetric )\n",
+    "reg3 = ants.registration( image, image2, 'SyNOnly',\n",
+    "    multivariate_extras = metrics )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Quantify the results in terms of mutual information of the registration results using the original image intensity."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-0.5175441503528395\n",
+      "-0.7395538667097538\n",
+      "-0.7289557066574497\n",
+      "-0.7510951384517675\n"
+     ]
+    }
+   ],
+   "source": [
+    "print( ants.image_mutual_information( image, image2 ) )\n",
+    "print( ants.image_mutual_information( image, reg1['warpedmovout'] ) )\n",
+    "print( ants.image_mutual_information( image, reg2['warpedmovout'] ) )\n",
+    "print( ants.image_mutual_information( image, reg3['warpedmovout'] ) )"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
