DOC: multi-metric tutorial

--- a/tutorials/Multi-metric registration.ipynb
+++ b/tutorials/Multi-metric registration.ipynb
@@ -34,7 +34,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Perform a baseline registration with a single feature and create a couple of new metrics."
+    "Perform a baseline registration with a single feature and create a couple of new metrics.  Each metric is defined a name (\"CC\"), the input fixed (image), input moving (image2), a weight value (e.g. 2) sampling parameter ( for CC this defines a radius of 3x3 e.g. 1 extra pixel beyond the center."
    ]
   },
   {
