DOC: multi-metric tutorial

--- a/tutorials/Multi-metric registration.ipynb
+++ b/tutorials/Multi-metric registration.ipynb
@@ -34,18 +34,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Perform a baseline registration with a single feature and create a couple of new metrics.  Each metric is defined a name (\"CC\"), the input fixed (image), input moving (image2), a weight value (e.g. 2) sampling parameter ( for CC this defines a radius of 3x3 e.g. 1 extra pixel beyond the center."
+    "Perform a baseline registration with a single feature and create a couple of new metrics.  Each metric is defined by a name (\"CC\"), the input fixed (image), input moving (image2), a weight value (e.g. 2) and a sampling parameter ( for CC this defines a radius of 9x9 e.g. 4 extra pixels on all sides of the center pixel.  Five entries are needed in total."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
     "reg1 = ants.registration( image, image2, 'SyNOnly' )\n",
     "demonsMetric = ['demons', g1, g2, 1, 1]\n",
-    "ccMetric = ['CC', image, image2, 2, 1 ]"
+    "ccMetric = ['CC', image, image2, 2, 4 ]"
    ]
   },
   {
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
       "-0.5175441503528395\n",
       "-0.7395538667097538\n",
       "-0.7289557066574497\n",
-      "-0.7510951384517675\n"
+      "-0.7649453900726915\n"
      ]
     }
    ],
