ENH: transform generation

--- a/tutorials/Transform Generators.ipynb
+++ b/tutorials/Transform Generators.ipynb
@@ -11,7 +11,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can generate ants/itk transforms with ANTsPy generator classes.   These can also be chained together.  Parameters arise from user-set gaussian parameters.  First, we show 2D."
+    "We can generate ants/itk transforms with ANTsPy generator classes.   These can also be chained together.  Parameters are generated from user-set gaussian distributions (mean and standard deviation).  First, we show 2D."
    ]
   },
   {
